Fixed small issue on Firefox

--- a/src/palette-color-picker.scss
+++ b/src/palette-color-picker.scss
@@ -15,7 +15,8 @@ $cpfp-background: #fff;
   /*background: url(palette-color-picker-icon.svg) center center no-repeat;*/
   cursor: pointer;
 
-  outline: 1px solid $cpfp-border;
+  box-shadow: 0 0 0 1px $cpfp-border;
+  /*outline: 1px solid $cpfp-border;*/
   border: 2px solid #fff;
 }
 
